Fix - fixed media query padding on small size screens

--- a/src/components/HomeInterface/HomeInterface.css
+++ b/src/components/HomeInterface/HomeInterface.css
@@ -9,10 +9,10 @@
 
 
 
-/* .padding-global {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-} */
+.padding-global {
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
 
 
 @import url('https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Pre:wght@400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Onest:wght@100..900&family=Roboto&display=swap');
@@ -161,6 +161,13 @@
     font-weight: 600;
     line-height: 5.7rem;
     padding-bottom: 3.125rem;
+}
+
+@media (max-width:345px){
+    .stats-quote{
+        font-size: 3rem;
+        line-height: 2.5rem;
+    }
 }
 
 .about-card {
